<resources>
    <string name="app_name">Week10</string>
    <string name="defaultWebClientId">812383136186-bmc082ukkl6im8v60er495vabariso43.apps.googleusercontent.com</string>
    <string name="GoogleLoginBtnText">Log In with Google</string>
    <string name="GoogleSignInBtnText">Sign Up with Google</string>
    <string name="signUpWithFacebookText">Sign Up with Facebook</string>
    <string name="facebook_app_id">24255008837428304</string>
    <string name="fb_login_protocol_scheme">fb24255008837428304</string>
    <string name="facebook_client_token">56789</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="move_to_login_text">Already have an account? Log in</string>
    <string name="or">OR</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="log_in">Log In</string>
    <string name="enter_phone_number">Enter phone number (+1 234...)</string>
    <string name="send_code">Send Code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify_code">Verify Code</string>
    <string name="phone_sign_in">Phone Sign In</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="family_name">Family Name</string>
    <string name="back_arrow">back arrow</string>
    <string name="view_map">View Map</string>
    <string name="question_media_options"><![CDATA[Question & Media Options]]></string>
    <string name="record_video">Record Video</string>
    <string name="get_current_location">Get current location</string>
    <string name="camera">Camera</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="view_photo">View Photo</string>
    <string name="view_video">View Video</string>
    <string name="start_video">Start Video</string>
    <string name="exit">Exit</string>
</resources>