<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camera">


    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/capture_photo"
        app:layout_constraintBottom_toTopOf="@+id/btnExtractPhoto"
        app:layout_constraintEnd_toStartOf="@+id/btnRecordVideo"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExtractPhoto"
        android:layout_height="wrap_content"
        android:layout_width="140dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_photo"
        app:layout_constraintBottom_toTopOf="@+id/imageBtnPreviousPage"
        app:layout_constraintEnd_toStartOf="@+id/btnExtractVideo"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExtractVideo"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_video"
        app:layout_constraintBottom_toTopOf="@+id/imageBtnPreviousPage"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRecordVideo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_video"
        app:layout_constraintBottom_toTopOf="@+id/btnExtractVideo"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="276dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnRecordVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="276dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnRecordVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />


    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageBtnPreviousPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>